# chungus

./: package-lock.json  package.json
.github/workflows/: main.yml  pull-request.yml
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/chungus_ops/: Cargo.toml
src-tauri/chungus_ops/src/: analysis.rs  dependency_graph.rs  error.rs  file.rs  lib.rs  logging.rs  module.rs  module_cache.rs  parser.rs  resolve.rs  webpack_report.rs
src-tauri/chungus_ops/src/parser/: parsers.rs
src-tauri/chungus_ops/src/sample_javascript/: output  package.json
src-tauri/chungus_ops/src/sample_javascript/module/: a.js
src-tauri/src/: anaylsis.rs  application_state.rs  file_tree.rs  loading.rs  main.rs  webpack.rs
src/components/: Configuration.tsx  D3TreeMap.tsx  EventSyncedState.tsx  Sidebar.tsx  Toaster.tsx  state.tsx
