[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
incremental = true

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = [] }
chungus-ops = { path = "chungus_ops" }
native-dialog = "0.5.5"
tracing = "0.1.26"
tracing-subscriber = "0.2.20"
dirs = "3.0.2"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]


[workspace]
members = ['chungus_ops']
