[package]
name = "chungus-ops"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
tracing = "0.1.26"
serde_json = "1.0.66"
serde = { version = "1", features = ['derive', 'rc'] }
regex = "1"
parking_lot = { version = "0.11.2", features = ['serde'] }
pathdiff = "0.2.0"